# OptiRisk

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  generate_data.py  optirisk_initial_state.json  sonar-project.properties
backend/: CMakeLists.txt  Dockerfile
backend/src/: main.cpp
backend/src/compute/: black_scholes_simd.hpp  cascade_engine.hpp  monte_carlo.hpp  simd_engine.hpp  test_cascade_engine.cpp  test_monte_carlo.cpp  test_simd_engine.cpp
backend/src/concurrency/: disruptor.hpp  test_disruptor.cpp
backend/src/market/: order_book.hpp  test_order_book.cpp
backend/src/memory/: csr_graph.hpp  options_book.hpp
backend/src/network/: protocol.hpp  test_wire_protocol.cpp  udp_publisher.hpp  wire_protocol.hpp  ws_listener.hpp
backend/src/utils/: affinity.hpp
frontend/: CLAUDE.md  do-app.yaml  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/shock/: route.ts
frontend/app/api/stream/: route.ts
frontend/components/: RiskMap.tsx
frontend/components/chat/: ChatPanel.tsx  CommandInput.tsx
frontend/components/map/: GeoGraphScene.tsx  MapContainer.tsx
frontend/components/map/layers/: blobLabelLayer.ts  cityBlobLayer.ts  cityEdgeLayer.ts  cityHubLayer.ts  edgeLayer.ts  focusEdgeLayer.ts  geoLabelsLayer.ts  hubEdgeLayer.ts  labelLayer.ts  nodeLayer.ts
frontend/components/panels/: CityHubPanel.tsx  NodeInfoCard.tsx  StatusBar.tsx  TopControls.tsx
frontend/hooks/: useFormationAnimation.ts  useRiskFeed.ts  useRiskSocket.ts  useViewportState.ts
frontend/lib/binary/: decodeDelta.ts  decodeSnapshot.ts  encodeShock.ts  schema.ts
frontend/lib/bridge/: shockCodec.ts  upstream.ts
frontend/lib/graph/: cityHubs.ts  focusEdges.ts  indexing.ts
frontend/services/: websocket.ts
frontend/store/: connectionStore.ts  graphStore.ts  simulationStore.ts  uiStore.ts
frontend/types/: graph.ts  simulation.ts
scripts/: infer_network.py
